--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "langchain-text-ai",
-  "version": "0.1.0",
+  "name": "greenroof-ai-assistant",
+  "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
